--- a/starter-code/memory.html
+++ b/starter-code/memory.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <title>Superhero Memory Game</title>
-    <!-- LINK THE STYLES HERE -->
+
+    <link rel="stylesheet" href="/starter-code/stylesheets/memory.css" />
   </head>
   <body>
     <div>
@@ -14,6 +15,8 @@
       <p>Pairs Guessed: <span id="pairs_guessed">0</span></p>
     </div>
     <div id="memory_board"></div>
-    <!-- LINK THE JAVASCRIPT FILES HERE (keep in mind that the order in which you link them MATTERS) -->
+
+    <script src="/starter-code/js/memory.js"></script>
+    <script src="/starter-code/js/main.js"></script>
   </body>
 </html>
